--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     <header>
         <div class="header-content">
             <!-- Add your profile picture here -->
-            <img src="c:\Users\STUDENT\Pictures\siva.png"alt="Your Profile Picture"class="profile-picture">
+            <img src="sv.jpeg"alt="Your Profile Picture"class="profile-picture">
             <h1>Sivamoorthi</h1>
             <p>Computer Science</p>
         </div>
